# paper-fetcher

./: .gitignore  README.md  answers 01.md  pyproject.toml
.github/workflows/: daily-arxiv-fetch.yml  tests.yml
classification/: BENCHMARK.md  PSEUDOCODE.md
data/: arxiv_kg.sqlite3
dataset/: README.md  daily_counts.csv  daily_counts.json  fetch_arxiv_dataset.py  metadata.json
dataset/validity_envelopes/: 2026-07-03.jsonl  2026-07-04.jsonl  2026-07-05.jsonl  2026-07-06.jsonl  2026-07-07.jsonl  2026-07-08.jsonl  2026-07-09.jsonl  2026-07-10.jsonl  2026-07-11.jsonl  2026-07-12.jsonl  2026-07-13.jsonl  2026-07-14.jsonl  2026-07-15.jsonl  README.md  manifest.json
notebooks/: 02_feature_extractor.ipynb
src/arxiv_kg/: __init__.py  category_classifier.py  daily.py  db.py  demo.py  evaluation.py  extractor.py  fetcher.py  ids.py  models.py  pdf_text.py  validity.py  validity_dataset.py  web.py
src/arxiv_kg/static/: app.js  index.html  styles.css
tests/: test_category_classifier.py  test_daily.py  test_dataset_curation.py  test_evaluation.py  test_extractor.py  test_fetcher.py  test_pdf_text.py  test_validity.py  test_validity_artifact.py  test_validity_dataset.py  test_web.py  test_workflow.py
