[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-kg"
version = "0.1.0"
description = "arXiv paper fetching and knowledge-graph bootcamp code"
requires-python = ">=3.10"
dependencies = ["arxiv", "pydantic", "requests"]

[project.scripts]
paper-fetcher = "arxiv_kg.web:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arxiv_kg = ["static/*.html", "static/*.css", "static/*.js", "static/*.svg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
